--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     <h1>Travel to Costa Rica</h1>
-    <p>... and you'll get to see these beauties!</p>
+    <p>... and you'll get to see these beauties! Shaboingus</p>
   </body>
 </html>
