--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Project: Travel webpage</title>
+    <title>UnderDukeDev</title>
   </head>
   <body>
-    <h1>Travel to Costa Rica</h1>
-    <p>... and you'll get to see these beauties! Shaboingus</p>
+    <h1>UnderDukeDev</h1>
+    <p>Shaboingus</p>
   </body>
 </html>
