--- a/index.html
+++ b/index.html
@@ -3,9 +3,15 @@
   <head>
     <meta charset="utf-8">
     <title>UnderDukeDev</title>
+    <link rel = "stylesheet" href="style.css">
   </head>
   <body>
     <h1>UnderDukeDev</h1>
+    <div class= "navbar">
+      <a> Yes</a>
+      <a> No</a>
+      <a> Maybe so</a>
+    </div>
     <p>Shaboingus</p>
   </body>
 </html>
